# jane-the-llama

./: .dockerignore  .gitignore  Dockerfile  README.md  compose.yml  package-lock.json  pyproject.toml  requirements.txt
jane_the_llama/: __init__.py  api.py  client.py  control_plane.py  main.py  rag_workflow.py  settings.py  types.py
milvus/: create_watsonx_user.py  delete_llamacollection.py  dump_role_privileges.py  milvus.yaml  privileges.json  reset_root_password.py
scripts/: basic.py  deploy_test.sh  query.py  scraper.py  workflow.py
