[tool.poetry]
name = "sms-chat"
version = "0.1.0"
description = ""
authors = ["Jonathan Springer <jonpspri@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
llama-index = "^0.11.10"
llama-index-readers-wordpress = "^0.2.2"
lxml = "^5.3.0"
pymilvus = "^2.4.6"
ibm-watsonx-ai = "^1.1.9"
llama-index-embeddings-ibm = "^0.2.0"
llama-index-vector-stores-milvus = "^0.2.3"
llama-index-llms-ibm = "^0.2.1"
python-configuration = "^0.12.1"
llama-deploy = {git = "https://github.com/jonpspri/llama_deploy.git", rev = "context"}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
